Feature/simply 3152 Improve breadcrumbs on book pages (#233)
* [SIMPLY-3152] Ensure that local configuration settings do not get added to the repo.

* [SIMPLY-3152] Set up context for breadcrumbs (in progress)

* [SIMPLY-3152] Code cleanup

* [SIMPLY-3152] Set up context for breadcrumbs (in progress)

* [SIMPLY-3152] Code cleanup

* kristo/fixes

* [SIMPLY-3152] PR Feedback related to gitignore.

* [SIMPLY-3152] FIx typescript issue related to the presence of an undefined breadcrumbs array.

* [SIMPLY-3152] Code cleanup

* [SIMPLY-3152] Rename variable for clarity.

* [SIMPLY-3152] Rename context's state setter method for clarity.

* [SIMPLY-3152] Rename context's state variable for clarity.

* [SIMPLY-3152] Code cleanup

* [SIMPLY-3152] Changelog

* [SIMPLY-3152] Add cross-env library to enable multi-platform support for running node scripts.

* [SIMPLY-3152] Remove test condition which constrained the number of times the mockedSWR was called which turned out not to be necessary.

* [SIMPLY-3152] Fix aria-label formatting in response to failing test.

* [SIMPLY-3152] Restore package.json to last known working version. Remove cross-env package in preparation to remove timezone dependency in tests.

* [SIMPLY-3152] Attempt to mock a date to get around timezone-related test failures. In Progress.

* save mock date string

* mock all date strings

* [SIMPLY-3152] PR Feedback

* [SIMPLY-3152] Working on breadcrumb tests. In progress.

* [SIMPLY-3152] Working on breadcrumb tests. In progress.

* [SIMPLY-3152] Working on breadcrumb tests. In progress.

* [SIMPLY-3152] Working on breadcrumb tests. In progress.

* tests

* lint

* remove comment

Co-authored-by: Michael Kaplan <MKaplan@whereoware.com>
Co-authored-by: kristojorg <kristo.jorgenson@gmail.com>
Co-authored-by: Kristo Jorgenson <kristojorg@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build": "next build",
     "start": "next start",
     "build-and-start": "npm run build && npm run start",
-    "test": "TZ=UTC jest --watch",
+    "test": "jest --watch",
     "test:ci": "jest --ci",
     "lint": "eslint \"*/**/*.{ts,tsx}\"",
     "lint:fix": "eslint \"*/**/*.{ts,tsx}\" --fix",
