init cypress tests

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "build-and-start": "npm run build && npm run start",
     "test": "jest --watch",
     "test:ci": "jest --ci",
+    "test:integration": "cypress open",
     "lint": "eslint \"*/**/*.{ts,tsx}\"",
     "lint:fix": "eslint \"*/**/*.{ts,tsx}\" --fix",
     "generate-icons": "npx @svgr/cli --template src/icons/_template.js --typescript --icon --ext tsx --svg-props 'fill=currentColor' -d src/icons src/icons",
@@ -74,6 +75,7 @@
     "@storybook/addon-essentials": "^6.1.2",
     "@storybook/addon-links": "^6.1.2",
     "@storybook/react": "^6.1.2",
+    "@testing-library/cypress": "^7.0.6",
     "@testing-library/dom": "^7.26.4",
     "@testing-library/jest-dom": "^5.5.0",
     "@testing-library/react": "^11.0.2",
@@ -97,6 +99,7 @@
     "@typescript-eslint/parser": "^4.1.0",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.1",
+    "cypress": "^7.6.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
     "eslint": "^7.8.1",
