--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "jest": "^26.6.3",
     "jest-emotion": "^10.0.32",
     "jest-fetch-mock": "^3.0.3",
+    "msw": "^0.30.0",
     "prettier": "2.1.1",
     "react-is": "^16.13.1",
     "react-test-renderer": "^16.13.1",
