--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,12 +15,12 @@ jobs:
   changelog:
     name: Updates Changelog
     runs-on: ubuntu-latest
-    steps: 
+    steps:
       - uses: actions/checkout@v2
       - uses: dangoslen/changelog-enforcer@v1.4.0
         with:
-          changeLogPath: 'CHANGELOG.md'
-          skipLabel: 'no-changelog'
+          changeLogPath: "CHANGELOG.md"
+          skipLabel: "no-changelog"
 
   lint:
     name: Lint
@@ -48,7 +48,7 @@ jobs:
             ${{ runner.os }}-build-${{ env.cache-name }}-
             ${{ runner.os }}-build-
             ${{ runner.os }}-
-      
+
       - name: Install Dependencies
         run: npm install
 
@@ -84,7 +84,7 @@ jobs:
             ${{ runner.os }}-build-${{ env.cache-name }}-
             ${{ runner.os }}-build-
             ${{ runner.os }}-
-      
+
       - name: Install Dependencies
         run: npm install
 
@@ -120,7 +120,7 @@ jobs:
             ${{ runner.os }}-build-${{ env.cache-name }}-
             ${{ runner.os }}-build-
             ${{ runner.os }}-
-      
+
       - name: Install Dependencies
         run: npm install
 
