--- a/.github/workflows/oe-e2e.yml
+++ b/.github/workflows/oe-e2e.yml
@@ -3,17 +3,40 @@ name: Open Ebooks E2E
 on: [push, deployment, deployment_status]
 jobs:
   e2e:
-    # only runs this job on successful deploy
-    if: github.event_name == 'deployment_status' && github.event.deployment_status.state == 'success'
-    runs-on: ubuntu-latest
+    # only runs this job on successful deploy to Open Ebooks
+    if: github.event_name == 'deployment_status' && github.event.deployment_status.state == 'success' && github.event.deployment.environment == 'Preview – open-ebooks-web'
+    runs-on: ubuntu-20.04
     steps:
       - name: Dump GitHub context
         env:
-          GITHUB_CONTEXT: ${{ toJson(github) }}
+          GITHUB_CONTEXT: ${{ toJson(github.event.deployment.environment) }}
         run: |
           echo "$GITHUB_CONTEXT"
-      - name: Checkout 🛎
-        uses: actions/checkout@v1
+      - uses: actions/checkout@v2
+        with:
+          submodules: true
+          token: ${{ secrets.AXIS_NOW_ACCESS_TOKEN }}
+      - id: nvmrc
+        run: echo ::set-output name=NODE_VERSION::$(cat .nvmrc)
+
+      - name: Use Node Version from nvmrc
+        uses: actions/setup-node@v1
+        with: { node-version: "${{ steps.nvmrc.outputs.NODE_VERSION }}" }
+
+      - name: Cache node modules
+        uses: actions/cache@v2
+        env:
+          cache-name: cache-node-modules
+        with:
+          # npm cache files are stored in `~/.npm` on Linux/macOS
+          path: ~/.npm
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
+      - name: Install Dependencies
+        run: npm install
       - name: Run Cypress 🌲
         uses: cypress-io/github-action@v2
         env:
