don't install everything

--- a/.github/workflows/oe-e2e.yml
+++ b/.github/workflows/oe-e2e.yml
@@ -39,6 +39,8 @@ jobs:
         run: npm install
       - name: Run Cypress 🌲
         uses: cypress-io/github-action@v2
+        with:
+          install: false
         env:
           CYPRESS_BASE_URL: ${{ github.event.deployment_status.target_url }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
