--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     "styled-system": "^5.1.2",
     "swr": "^0.3.2",
     "system-font-css": "^2.0.2",
-    "theme-ui": "^0.3.1"
+    "theme-ui": "^0.3.1",
+    "tslib": "^2.3.0"
   },
   "optionalDependencies": {
     "@nypl-simplified-packages/axisnow-access-control-web": "^1.0.3"
