Run e2e tests only on deployment_status change

--- a/.github/workflows/oe-e2e.yml
+++ b/.github/workflows/oe-e2e.yml
@@ -1,6 +1,6 @@
 name: Open Ebooks E2E
 # https://docs.github.com/en/actions/reference/events-that-trigger-workflows
-on: [push, deployment, deployment_status]
+on: [deployment_status]
 jobs:
   e2e:
     # only runs this job on successful deploy to Open Ebooks
