--- a/.github/workflows/publish-qa.yml
+++ b/.github/workflows/publish-qa.yml
@@ -48,10 +48,10 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: |
-            nypl/patron-web:beta
-            nypl/patron-web:beta.${{ steps.get_sha.outputs.short_sha }}
-            nypl/patron-web:qa
-            nypl/patron-web:qa.${{ steps.get_sha.outputs.short_sha }}
+            thepalaceproject/web-patron:beta
+            thepalaceproject/web-patron:beta.${{ steps.get_sha.outputs.short_sha }}
+            thepalaceproject/web-patron:qa
+            thepalaceproject/web-patron:qa.${{ steps.get_sha.outputs.short_sha }}
           # allows us to install the private axisnow package
           build-args: |
             github_token=${{ secrets.GH_PACKAGES_TOKEN }}
