--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "simplified-circulation-patron-web",
+  "name": "@thepalaceproject/web-patron",
   "version": "4.4.1",
-  "description": "patron UI for Circulation Manager",
+  "description": "Patron UI for The Palace Project",
   "repository": {
     "type": "git",
-    "url": "https://github.com/NYPL-Simplified/circulation-patron-web.git"
+    "url": "https://github.com/ThePalaceProject/web-patron.git"
   },
-  "author": "NYPL",
+  "author": "The Palace Project",
   "license": "Apache-2.0",
   "scripts": {
     "dev": "next dev",
