--- a/.github/workflows/publish-qa.yml
+++ b/.github/workflows/publish-qa.yml
@@ -1,7 +1,7 @@
-# # This workflow will publish the qa image to docker hub
+# # This workflow will publish the qa image to the Docker registry
 name: Publish qa
 
-# # action will only run when a pull request to the beta branch is closed.
+# # action will only run when a pull request to the qa branch is closed.
 on:
   pull_request:
     branches: [qa]
@@ -9,8 +9,13 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  publish_beta:
-    name: Publish qa image to Docker Hub
+  publish_qa:
+    name: Publish qa image to Docker registry
+    env:
+      REGISTRY_HOST: ghcr.io
+      # Don't push the Docker image if the `NO_DOCKER_IMAGE` secret is set.
+      IMAGE_PUSH_ENABLED: ${{ secrets.NO_DOCKER_IMAGE == null }}
+
     # only run if the PR is merged.
     if: github.event.pull_request.merged
     runs-on: ubuntu-latest
@@ -30,28 +35,28 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Login to Docker Hub
+      - name: Login to the Docker registry
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          registry: ${{ env.REGISTRY_HOST }}
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Get short SHA
-        id: get_sha
-        run: echo "::set-output name=short_sha::$(git rev-parse --short HEAD)"
+      - name: Generate tags for web-patron image
+        id: web-patron-tags
+        uses: docker/metadata-action@v3
+        with:
+          images: ${{ env.REGISTRY_HOST }}/${{ github.repository_owner }}/web-patron
+          tags: |
+            type=semver,pattern={{major}}.{{minor}},priority=10
+            type=semver,pattern={{version}},priority=20
+            type=ref,event=branch,priority=30
+            type=sha,priority=40
 
-      - name: Build and push to Docker Hub
-        id: publish_docker_hub
+      - name: Build and push web-patron image
         uses: docker/build-push-action@v2
         with:
           context: .
           file: ./Dockerfile
-          push: true
-          tags: |
-            thepalaceproject/web-patron:beta
-            thepalaceproject/web-patron:beta.${{ steps.get_sha.outputs.short_sha }}
-            thepalaceproject/web-patron:qa
-            thepalaceproject/web-patron:qa.${{ steps.get_sha.outputs.short_sha }}
-          # allows us to install the private axisnow package
-          build-args: |
-            github_token=${{ secrets.GH_PACKAGES_TOKEN }}
+          push: ${{ env.IMAGE_PUSH_ENABLED }}
+          tags: ${{ steps.web-patron-tags.outputs.tags }}
