--- a/.github/workflows/release-prod.yml
+++ b/.github/workflows/release-prod.yml
@@ -10,6 +10,11 @@ on:
 jobs:
   release_master:
     name: Tag, Release and Publish
+    env:
+      REGISTRY_HOST: ghcr.io
+      # Don't push the Docker image if the `NO_DOCKER_IMAGE` secret is set.
+      IMAGE_PUSH_ENABLED: ${{ secrets.NO_DOCKER_IMAGE == null }}
+
     # only run if PR is merged (not just closed)
     if: github.event.pull_request.merged
     runs-on: ubuntu-latest
@@ -47,21 +52,28 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Login to Docker Hub
+      - name: Login to the Docker registry
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          registry: ${{ env.REGISTRY_HOST }}
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Publish to Docker Hub
+      - name: Generate tags for web-patron image
+        id: web-patron-tags
+        uses: docker/metadata-action@v3
+        with:
+          images: ${{ env.REGISTRY_HOST }}/${{ github.repository_owner }}/web-patron
+          tags: |
+            type=semver,pattern={{major}}.{{minor}},priority=10
+            type=semver,pattern={{version}},priority=20
+            type=ref,event=branch,priority=30
+            type=sha,priority=40
+
+      - name: Build and push web-patron image
         uses: docker/build-push-action@v2
         with:
           context: .
           file: ./Dockerfile
-          push: true
-          tags: |
-            thepalaceproject/web-patron:${{steps.autotagger.outputs.version}}
-            thepalaceproject/web-patron:latest
-          # allows us to install the private axisnow package
-          build-args: |
-            github_token=${{ secrets.GH_PACKAGES_TOKEN }}
+          push: ${{ env.IMAGE_PUSH_ENABLED }}
+          tags: ${{ steps.web-patron-tags.outputs.tags }}
