--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,50 +1,28 @@
-# This workflow will tag and release the production branch
-name: Production Release
+# This workflow will publish an image to the Docker registry on pushes to the main branch.
+name: Publish Release
 
-# workflow will only run when a pull request to the production branch is closed.
 on:
-  pull_request:
-    branches: [production]
-    types: [closed]
+  push:
+    branches: [main]
 
 jobs:
-  release_master:
-    name: Tag, Release and Publish
+  publish:
+    name: Publish image to Docker registry
     env:
       REGISTRY_HOST: ghcr.io
       # Don't push the Docker image if the `NO_DOCKER_IMAGE` secret is set.
       IMAGE_PUSH_ENABLED: ${{ secrets.NO_DOCKER_IMAGE == null }}
 
-    # only run if PR is merged (not just closed)
-    if: github.event.pull_request.merged
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
 
-        # the tag will match the package.json version (eg. v1.0.0)
-      - name: Tag
-        id: autotagger
-        uses: butlerlogic/action-autotag@stable
-        with:
-          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-          strategy: package
-          prefix: v
-          # use the body of the PR commit as the tag message
-          tag_message: ${{ github.event.pull_request.body }}
+      - id: nvmrc
+        run: echo ::set-output name=NODE_VERSION::$(cat .nvmrc)
 
-      - name: Release
-        id: create_release
-        if: steps.autotagger.outputs.tagname != ''
-        uses: actions/create-release@v1.0.0
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ steps.autotagger.outputs.tagname }}
-          release_name: ${{ steps.autotagger.outputs.tagname }}
-          # use the body of the PR commit as the release body
-          body: ${{ github.event.pull_request.body }}
-          draft: false
-          prerelease: false
+      - name: Use Node Version from nvmrc
+        uses: actions/setup-node@v1
+        with: { node-version: "${{ steps.nvmrc.outputs.NODE_VERSION }}" }
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
