--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "fetch-mock": "^9.4.0",
     "fetch-mock-jest": "^1.2.4",
+    "https": "^1.0.0",
     "jest": "^26.6.3",
     "jest-emotion": "^10.0.32",
     "jest-fetch-mock": "^3.0.3",
@@ -122,6 +123,7 @@
     "react-is": "^16.13.1",
     "react-test-renderer": "^16.13.1",
     "typescript": "^4.3.4",
+    "url": "^0.11.0",
     "webpack-bugsnag-plugins": "^1.4.3"
   },
   "prettier": {
