--- a/package.json
+++ b/package.json
@@ -74,6 +74,8 @@
   "devDependencies": {
     "@axe-core/react": "^4.1.0",
     "@babel/core": "^7.12.7",
+    "@cypress/react": "^5.9.2",
+    "@cypress/webpack-dev-server": "^1.4.0",
     "@next/bundle-analyzer": "^9.5.3",
     "@storybook/addon-actions": "^6.1.2",
     "@storybook/addon-essentials": "^6.1.2",
