--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "chalk": "^4.1.0",
     "deepmerge": "^4.2.2",
     "dompurify": "^2.2.0",
+    "dotenv": "^6.2.0",
     "downloadjs": "^1.4.7",
     "font-awesome": "^4.7.0",
     "fs": "0.0.1-security",
