--- a/community-config.yml
+++ b/community-config.yml
@@ -39,8 +39,10 @@ media_support:
   application/vnd.adobe.adept+xml:
     application/epub+zip: redirect-and-show
 
-  # Bearer Token Exchange (web app currently doesn't support this)
-  # application/vnd.librarysimplified.bearer-token+json:
+  # Bearer Token Exchange
+  application/vnd.librarysimplified.bearer-token+json:
+    application/pdf: show
+    application/epub+zip: show
 
 # defines the companion app for the instance. Can be "simplye" or "openebooks"
 # default is "simplye"
