--- a/package.json
+++ b/package.json
@@ -81,10 +81,10 @@
     "@axe-core/react": "^4.1.0",
     "@babel/core": "^7.12.7",
     "@next/bundle-analyzer": "^9.5.3",
-    "@storybook/addon-actions": "^6.1.2",
-    "@storybook/addon-essentials": "^6.1.2",
-    "@storybook/addon-links": "^6.1.2",
-    "@storybook/react": "^6.1.2",
+    "@storybook/addon-actions": "^6.3.7",
+    "@storybook/addon-essentials": "^6.3.7",
+    "@storybook/addon-links": "^6.3.7",
+    "@storybook/react": "^6.3.7",
     "@testing-library/cypress": "^7.0.6",
     "@testing-library/dom": "^7.26.4",
     "@testing-library/jest-dom": "^5.5.0",
@@ -109,6 +109,7 @@
     "@typescript-eslint/parser": "^4.28.0",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.1",
+    "core-js": "^3.16.4",
     "cypress": "^7.7.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
