--- a/.github/workflows/oe-integration-cypress.yml
+++ b/.github/workflows/oe-integration-cypress.yml
@@ -6,7 +6,7 @@ jobs:
   cypress-tests:
     # only runs this job on successful deploy to Open Ebooks
     name: Cypress Tests
-    if: github.event_name == 'deployment_status' && github.event.deployment_status.state == 'success' && github.event.deployment_status.environment == 'Preview – open-ebooks-web'
+    if: github.event.deployment_status.state == 'success' && github.event.deployment_status.environment == 'Preview – open-ebooks-web'
     runs-on: ubuntu-latest
     container: cypress/browsers:node14.17.0-chrome88-ff89
     steps:
@@ -99,7 +99,7 @@ jobs:
           --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
           --header 'Accept: application/vnd.github.v3+json' \
           --data '{
-            "context": "Cypress Tests",
+            "context": "Cypress Tests - Open eBooks",
             "state": "success",
             "description": "Cypress tests passed",
             "target_url": "https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
@@ -113,7 +113,7 @@ jobs:
           --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
           --header 'Accept: application/vnd.github.v3+json' \
           --data '{
-            "context": "Cypress Tests",
+            "context": "Cypress Tests - Open Ebooks",
             "state": "failure",
             "description": "Cypress tests failed",
             "target_url": "https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
