--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
       - uses: dangoslen/changelog-enforcer@v3
         with:
           changeLogPath: "CHANGELOG.md"
-          skipLabel: "no-changelog"
+          skipLabels: "no-changelog"
 
   lint:
     name: Lint
