--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "next-transpile-modules": "^4.0.0",
     "node-fetch": "^2.6.1",
     "opds-feed-parser": "0.0.18",
-    "react": "16.13.1",
+    "react": "16.14.0",
     "react-dom": "16.13.1",
     "react-hook-form": "^4.9.2",
     "react-hot-loader": "^4.12.20",
@@ -90,7 +90,7 @@
     "@types/js-cookie": "^2.2.6",
     "@types/node": "^14.6.4",
     "@types/pako": "^1.0.1",
-    "@types/react": "^16.9.49",
+    "@types/react": "16.14.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.9",
     "@types/theme-ui": "^0.3.1",
