--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@theme-ui/color": "^0.4.0-rc.3",
     "@theme-ui/components": "^0.3.1",
     "@theme-ui/match-media": "^0.3.1",
+    "@thepalaceproject/webpub-viewer": "^0.1.0",
     "@zeit/next-source-maps": "0.0.3",
     "chalk": "^4.1.0",
     "deepmerge": "^4.2.2",
@@ -44,7 +45,6 @@
     "history": "^4.10.1",
     "js-cookie": "^2.2.1",
     "jsdom": "^16.2.2",
-    "library-simplified-webpub-viewer": "^0.2.6",
     "lodash": "^4.17.20",
     "moment": "^2.24.0",
     "next": "^10.0.8",
