--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
   "author": "The Palace Project",
   "license": "Apache-2.0",
   "scripts": {
-    "dev": "next dev",
-    "dev:https": "node dev-server.js",
-    "dev:axe": "REACT_AXE=true npm run dev",
-    "build": "next build",
-    "start": "next start",
-    "build-and-start": "npm run build && npm run start",
+    "dev": "NODE_OPTIONS=--openssl-legacy-provider next dev",
+    "dev:https": "NODE_OPTIONS=--openssl-legacy-provider node dev-server.js",
+    "dev:axe": "NODE_OPTIONS=--openssl-legacy-provider REACT_AXE=true npm run dev",
+    "build": "NODE_OPTIONS=--openssl-legacy-provider next build",
+    "start": "NODE_OPTIONS=--openssl-legacy-provider next start",
+    "build-and-start": "NODE_OPTIONS=--openssl-legacy-provider && npm run build && npm run start",
     "test": "jest --watch",
     "test:ci": "jest --ci",
     "test:integration": "cypress open",
