Upgrade typescript and eslint.
- Stop at `typescript` v4.7.4, since v4.8+ has checks that will break
  the code right now.
- Also, `useUnknownInCatchVariables` began defaulting to `true` sometime
  after `typescript` v4.3.4, so we turn it off to prevent errors from our
  untyped `catch` variables.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
     "downlevelIteration": true,
     "importHelpers": true,
     "baseUrl": "src",
+    "useUnknownInCatchVariables": false,
   },
   "exclude": ["node_modules", "jest.config.js", "cypress"],
   "include": [
