--- a/package.json
+++ b/package.json
@@ -91,14 +91,14 @@
     "@types/react-redux": "^7.1.9",
     "@types/theme-ui": "^0.3.7",
     "@types/xml2js": "^0.4.5",
-    "@typescript-eslint/eslint-plugin": "^4.28.0",
-    "@typescript-eslint/parser": "^4.28.0",
+    "@typescript-eslint/eslint-plugin": "^7.0.1",
+    "@typescript-eslint/parser": "^7.0.1",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.1",
     "cypress": "^7.6.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
-    "eslint": "^7.29.0",
+    "eslint": "8.56.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.4.0",
@@ -113,7 +113,7 @@
     "prettier": "2.1.1",
     "react-is": "^17.0.2",
     "react-test-renderer": "^17.0.2",
-    "typescript": "^4.3.4",
+    "typescript": "4.7.4",
     "webpack-bugsnag-plugins": "^1.4.3"
   },
   "prettier": {
