--- a/package.json
+++ b/package.json
@@ -29,12 +29,13 @@
     "@bugsnag/plugin-react": "^7.19.0",
     "@csstools/normalize.css": "^10.1.0",
     "@emotion/core": "^10.0.28",
+    "@emotion/react": "^11.11.4",
     "@emotion/styled": "^10.0.27",
     "@nypl/design-system-react-components": "^0.7.2",
     "@nypl/dgx-svg-icons": "^0.3.12",
-    "@theme-ui/color": "^0.4.0-rc.3",
-    "@theme-ui/components": "^0.3.5",
-    "@theme-ui/match-media": "^0.3.5",
+    "@theme-ui/color": "^0.6.2",
+    "@theme-ui/components": "^0.6.2",
+    "@theme-ui/match-media": "^0.6.2",
     "@thepalaceproject/webpub-viewer": "^0.1.0",
     "chalk": "^4.1.0",
     "deepmerge": "^4.2.2",
@@ -46,12 +47,12 @@
     "jsdom": "^16.2.2",
     "lodash": "^4.17.20",
     "moment": "^2.30.1",
-    "next": "^10.0.8",
+    "next": "14.2.0-canary.12",
     "next-transpile-modules": "^10.0.1",
     "node-fetch": "^2.6.13",
     "opds-feed-parser": "0.0.18",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^4.9.2",
     "react-hot-loader": "^4.12.20",
     "react-intersection-observer": "^8.30.3",
@@ -60,13 +61,14 @@
     "request": "^2.88.2",
     "styled-system": "^5.1.2",
     "swr": "^0.3.2",
-    "theme-ui": "^0.3.5",
+    "theme-ui": "^0.6.2",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@axe-core/react": "^4.1.0",
     "@babel/core": "^8.0.0-alpha.6",
-    "@next/bundle-analyzer": "^9.5.3",
+    "@next/bundle-analyzer": "^14.1.3",
+    "@next/eslint-plugin-next": "^14.1.3",
     "@storybook/addon-actions": "^6.1.2",
     "@storybook/addon-essentials": "^6.1.2",
     "@storybook/addon-links": "^6.1.2",
@@ -86,10 +88,10 @@
     "@types/js-cookie": "^2.2.6",
     "@types/node": "^18.19.15",
     "@types/pako": "^1.0.1",
-    "@types/react": "17.0.2",
-    "@types/react-dom": "^17.0.25",
+    "@types/react": "^18.2.64",
+    "@types/react-dom": "^18.2.21",
     "@types/react-redux": "^7.1.9",
-    "@types/theme-ui": "^0.3.7",
+    "@types/theme-ui": "^0.6.0",
     "@types/xml2js": "^0.4.5",
     "@typescript-eslint/eslint-plugin": "^7.0.1",
     "@typescript-eslint/parser": "^7.0.1",
@@ -111,8 +113,8 @@
     "jest-fetch-mock": "^3.0.3",
     "msw": "^0.30.0",
     "prettier": "2.1.1",
-    "react-is": "^17.0.2",
-    "react-test-renderer": "^17.0.2",
+    "react-is": "^18.2.0",
+    "react-test-renderer": "^18.2.0",
     "typescript": "4.7.4",
     "webpack-bugsnag-plugins": "^1.8.0"
   },
