--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": false,
     "skipLibCheck": true,
     "strict": true,
@@ -18,8 +22,14 @@
     "importHelpers": true,
     "baseUrl": "src",
     "useUnknownInCatchVariables": false,
+    "incremental": true,
+    "noImplicitAny": false,
   },
-  "exclude": ["node_modules", "jest.config.js", "cypress"],
+  "exclude": [
+    "node_modules",
+    "jest.config.js",
+    "cypress"
+  ],
   "include": [
     "next-env.d.ts",
     "**/*.ts",
