--- a/package.json
+++ b/package.json
@@ -28,14 +28,13 @@
     "@bugsnag/js": "^7.22.4",
     "@bugsnag/plugin-react": "^7.19.0",
     "@csstools/normalize.css": "^10.1.0",
-    "@emotion/core": "^10.0.28",
     "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^10.0.27",
     "@nypl/design-system-react-components": "^0.7.2",
     "@nypl/dgx-svg-icons": "^0.3.12",
-    "@theme-ui/color": "^0.6.2",
-    "@theme-ui/components": "^0.6.2",
-    "@theme-ui/match-media": "^0.6.2",
+    "@theme-ui/color": "^0.16.2",
+    "@theme-ui/components": "^0.16.2",
+    "@theme-ui/match-media": "^0.16.2",
+    "@theme-ui/mdx": "^0.16.2",
     "@thepalaceproject/webpub-viewer": "^0.1.0",
     "chalk": "^4.1.0",
     "deepmerge": "^4.2.2",
@@ -61,7 +60,7 @@
     "request": "^2.88.2",
     "styled-system": "^5.1.2",
     "swr": "^0.3.2",
-    "theme-ui": "^0.6.2",
+    "theme-ui": "^0.16.2",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
@@ -91,7 +90,6 @@
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
     "@types/react-redux": "^7.1.9",
-    "@types/theme-ui": "^0.6.0",
     "@types/xml2js": "^0.4.5",
     "@typescript-eslint/eslint-plugin": "^7.0.1",
     "@typescript-eslint/parser": "^7.0.1",
