replace or remove libraries incompatible with React 18
* docker build working with npm install
* --legacy-peer-deps flag no longer needed
* started refactoring tests to account for updated ariakit (reakit replacement) and swr
* disabled some type checking

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,6 +36,8 @@
     ".eslintrc.js",
     "**/*.tsx",
     "next.config.js",
-    "public/sw.js"
+    "public/sw.js",
+    "src/config/fetch-config.js",
+    "src/icons/_template.js"
   ]
 }
