--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@ariakit/react": "^0.4.13",
     "@bugsnag/js": "^7.22.4",
     "@bugsnag/plugin-react": "^7.19.0",
     "@csstools/normalize.css": "^10.1.0",
@@ -52,26 +53,24 @@
     "opds-feed-parser": "0.0.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^4.9.2",
-    "react-hot-loader": "^4.12.20",
+    "react-hook-form": "^7.53.1",
     "react-intersection-observer": "^8.30.3",
     "react-redux": "^7.1.0",
-    "reakit": "^1.2.4",
     "request": "^2.88.2",
     "styled-system": "^5.1.2",
-    "swr": "^0.3.2",
+    "swr": "^1.3.0",
     "theme-ui": "^0.16.2",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@axe-core/react": "^4.1.0",
-    "@babel/core": "^8.0.0-alpha.6",
+    "@babel/core": "^7.26.0",
     "@next/bundle-analyzer": "^14.1.3",
     "@next/eslint-plugin-next": "^14.1.3",
-    "@storybook/addon-actions": "^6.1.2",
-    "@storybook/addon-essentials": "^6.1.2",
-    "@storybook/addon-links": "^6.1.2",
-    "@storybook/react": "^6.1.2",
+    "@storybook/addon-actions": "^8.4.0",
+    "@storybook/addon-essentials": "^8.4.0",
+    "@storybook/addon-links": "^8.4.0",
+    "@storybook/react": "^7.6.20",
     "@testing-library/cypress": "^7.0.6",
     "@testing-library/dom": "^7.26.4",
     "@testing-library/jest-dom": "^5.17.0",
@@ -80,14 +79,12 @@
     "@testing-library/user-event": "^12.1.4",
     "@types/dompurify": "^3.0.5",
     "@types/downloadjs": "^1.4.2",
-    "@types/enzyme": "^3.10.8",
-    "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/history": "^4.7.8",
     "@types/jest": "^26.0.15",
     "@types/js-cookie": "^2.2.6",
     "@types/node": "^18.19.15",
     "@types/pako": "^1.0.1",
-    "@types/react": "^18.2.64",
+    "@types/react": "^18.3.12",
     "@types/react-dom": "^18.2.21",
     "@types/react-redux": "^7.1.9",
     "@types/xml2js": "^0.4.5",
@@ -96,8 +93,6 @@
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.1",
     "cypress": "^7.6.0",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.5",
     "eslint": "8.56.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
@@ -113,7 +108,7 @@
     "prettier": "2.1.1",
     "react-is": "^18.2.0",
     "react-test-renderer": "^18.2.0",
-    "typescript": "4.7.4",
+    "typescript": "^4.7.4",
     "webpack-bugsnag-plugins": "^1.8.0"
   },
   "prettier": {
