--- a/package.json
+++ b/package.json
@@ -51,10 +51,10 @@
     "next-transpile-modules": "^10.0.1",
     "node-fetch": "^2.6.13",
     "opds-feed-parser": "0.0.18",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.1",
-    "react-intersection-observer": "^8.30.3",
+    "react-intersection-observer": "^9.13.1",
     "react-redux": "^7.1.0",
     "request": "^2.88.2",
     "styled-system": "^5.1.2",
@@ -71,9 +71,9 @@
     "@storybook/addon-essentials": "^8.4.0",
     "@storybook/addon-links": "^8.4.0",
     "@storybook/react": "^7.6.20",
-    "@testing-library/cypress": "^7.0.6",
+    "@testing-library/cypress": "^10.0.2",
     "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.1",
     "@testing-library/react-hooks": "^3.2.1",
     "@testing-library/user-event": "^14.5.2",
@@ -92,7 +92,7 @@
     "@typescript-eslint/parser": "^7.0.1",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.1",
-    "cypress": "^7.6.0",
+    "cypress": "^13.15.2",
     "eslint": "8.56.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
@@ -101,13 +101,14 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "fetch-mock": "^9.4.0",
     "fetch-mock-jest": "^1.2.4",
-    "jest": "^26.6.3",
+    "jest": "^29.7.0",
     "jest-emotion": "^10.0.32",
+    "jest-environment-jsdom": "^29.7.0",
     "jest-fetch-mock": "^3.0.3",
+    "jest-jasmine2": "^29.7.0",
     "msw": "^0.30.0",
     "prettier": "2.1.1",
     "react-is": "^18.2.0",
-    "react-test-renderer": "^18.2.0",
     "typescript": "^4.7.4",
     "webpack-bugsnag-plugins": "^1.8.0"
   },
