--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "jsdom": "^16.2.2",
     "lodash": "^4.17.20",
     "moment": "^2.30.1",
-    "next": "14.2.0-canary.12",
+    "next": "^15.0.3",
     "next-transpile-modules": "^10.0.1",
     "node-fetch": "^2.6.13",
     "opds-feed-parser": "0.0.18",
