--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "@bugsnag/plugin-react": "^7.19.0",
     "@csstools/normalize.css": "^10.1.0",
     "@emotion/react": "^11.11.4",
+    "@loglayer/transport-log-file-rotation": "^2.0.1",
+    "@loglayer/transport-pino": "^2.0.1",
+    "@loglayer/transport-winston": "^2.0.1",
     "@nypl/design-system-react-components": "^0.7.2",
     "@nypl/dgx-svg-icons": "^0.3.12",
     "@theme-ui/color": "^0.16.2",
@@ -46,20 +49,26 @@
     "js-cookie": "^2.2.1",
     "jsdom": "^16.2.2",
     "lodash": "^4.17.20",
+    "loglayer": "^6.1.1",
     "moment": "^2.30.1",
     "next": "^15.0.3",
     "next-transpile-modules": "^10.0.1",
     "node-fetch": "^2.6.13",
     "opds-feed-parser": "^0.1.0",
+    "pino": "^9.6.0",
+    "pino-roll": "^3.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.1",
     "react-intersection-observer": "^9.13.1",
     "react-redux": "^7.1.0",
+    "serialize-error": "^12.0.0",
     "styled-system": "^5.1.2",
     "swr": "^1.3.0",
     "theme-ui": "^0.16.2",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "@axe-core/react": "^4.1.0",
