--- a/package.json
+++ b/package.json
@@ -29,6 +29,11 @@
     "@bugsnag/plugin-react": "^7.19.0",
     "@csstools/normalize.css": "^10.1.0",
     "@emotion/react": "^11.11.4",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-regular-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@nypl/design-system-react-components": "^0.7.2",
     "@nypl/dgx-svg-icons": "^0.3.12",
     "@theme-ui/color": "^0.16.2",
@@ -40,7 +45,6 @@
     "deepmerge": "^4.2.2",
     "dompurify": "^3.0.8",
     "downloadjs": "^1.4.7",
-    "font-awesome": "^4.7.0",
     "history": "^4.10.1",
     "js-cookie": "^2.2.1",
     "jsdom": "^16.2.2",
