--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@theme-ui/mdx": "^0.16.2",
     "@thepalaceproject/webpub-viewer": "^0.1.0",
     "chalk": "^4.1.0",
+    "date-fns": "^4.1.0",
     "deepmerge": "^4.2.2",
     "dompurify": "^3.2.4",
     "downloadjs": "^1.4.7",
