--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "start": "next start",
     "build-and-start": "npm run build && npm run start",
     "test": "jest --watch",
-    "test:ci": "jest --ci",
+    "test:ci": "jest --ci && jest --config jest.config.node.js --ci",
+    "test:node": "jest --config jest.config.node.js --watch",
+    "test:node:ci": "jest --config jest.config.node.js --ci",
     "test:integration": "cypress open",
     "lint": "eslint \"*/**/*.{ts,tsx}\"",
     "lint:fix": "eslint \"*/**/*.{ts,tsx}\" --fix",
