WIP - update theme UI base sub-components

--- a/package.json
+++ b/package.json
@@ -37,10 +37,12 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@nypl/design-system-react-components": "^0.7.2",
     "@nypl/dgx-svg-icons": "^0.3.12",
-    "@theme-ui/color": "^0.16.2",
-    "@theme-ui/components": "^0.16.2",
-    "@theme-ui/match-media": "^0.16.2",
-    "@theme-ui/mdx": "^0.16.2",
+    "@theme-ui/color": "^0.17.2",
+    "@theme-ui/components": "^0.17.2",
+    "@theme-ui/core": "^0.17.2",
+    "@theme-ui/css": "^0.17.2",
+    "@theme-ui/match-media": "^0.17.2",
+    "@theme-ui/mdx": "^0.17.2",
     "@thepalaceproject/webpub-viewer": "^0.1.0",
     "chalk": "^4.1.0",
     "date-fns": "^4.1.0",
