--- a/package.json
+++ b/package.json
@@ -95,15 +95,15 @@
     "@types/react-dom": "^18.2.21",
     "@types/react-redux": "^7.1.9",
     "@types/xml2js": "^0.4.5",
-    "@typescript-eslint/eslint-plugin": "^7.0.1",
-    "@typescript-eslint/parser": "^7.0.1",
+    "@typescript-eslint/eslint-plugin": "^8.46.2",
+    "@typescript-eslint/parser": "^8.46.2",
     "babel-jest": "^29.7.0",
     "babel-loader": "^8.2.1",
     "cypress": "^13.15.2",
-    "eslint": "8.56.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.4.0",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^9.1.2",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "fetch-mock": "^10.1.1",
@@ -113,9 +113,9 @@
     "jest-fetch-mock": "^3.0.3",
     "jest-jasmine2": "^29.7.0",
     "msw": "^2.6.5",
-    "prettier": "2.1.1",
+    "prettier": "^3.6.2",
     "react-is": "^18.2.0",
-    "typescript": "^4.8.4",
+    "typescript": "^5.9.3",
     "webpack-bugsnag-plugins": "^1.8.0"
   },
   "prettier": {
