--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,13 +17,14 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
+    "jsxImportSource": "theme-ui",
     "strictNullChecks": true,
     "downlevelIteration": true,
     "importHelpers": true,
     "baseUrl": "src",
     "useUnknownInCatchVariables": false,
     "incremental": true,
-    "noImplicitAny": false,
+    "noImplicitAny": false
   },
   "exclude": [
     "node_modules",
