ignore _next dir

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,8 @@
   "exclude": [
     "node_modules",
     "jest.config.js",
-    "cypress"
+    "cypress",
+    "_next"
   ],
   "include": [
     "next-env.d.ts",
